Introduce Managers prefab

--- a/Assets/Prefabs/README
+++ b/Assets/Prefabs/README
@@ -1,3 +1,5 @@
 IMPORTANT:
 
-- Ball and Main Camera must be used together; otherwise, camera movement will not work. Remove default Main Camera from scenes and use provided prefab instead.
+- Managers must be included in every scene. It contains GameManager which will take care of spawning the ball and camera when requested. When adding to scene, make sure to create an Empty game object to act as spawn point. To make sure it is used, go to Managers -> GameManager -> Spawn Point and drop/select it there.
+
+- When play testing a scene, you can manually add in Ball and Main Camera together. Remove default Main Camera from the scene and use provided prefab instead when doing so. Make sure to not have Managers in scene during this.
